5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1592_2425.log
== SUBMITION (2019-04-01 02:27:32) 
-- CODE:
km = float(input("quilometros"))
l = float(input("litros"))

print(round(km/l, 3))
-- EXECUTION TIME:
0.127963
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 02:28:26) 
-- CODE:
km = float(input("quilometros"))
l = float(input("litros"))

km/l = x

print(round(x, 3))
-- EXECUTION TIME:
0.20978
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 4
    km/l = x
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:28:30) 
-- CODE:
km = float(input("quilometros"))
l = float(input("litros"))

km/l = x

print(round(x, 3))
-- ERROR:
File "XXXX", line 4
    km/l = x
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:29:09) 
-- CODE:
km = float(input("quilometros"))
l = float(input("litros"))

km/l = x

print(round(x, 3))
-- ERROR:
File "XXXX", line 4
    km/l = x
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:29:45) 
-- CODE:
km = int(input("quilometros"))
l = int(input("litros"))

km/l = x

print(round(x, 3))
-- ERROR:
File "XXXX", line 4
    km/l = x
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 02:29:55) 
-- CODE:
km = int(input("quilometros"))
l = int(input("litros"))

km/l = x

print(round(x, 3))
-- EXECUTION TIME:
0.146891
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 4
    km/l = x
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:31:14) 
-- CODE:
km = int(input("quilometros"))
l = int(input("litros"))

km/l = x

print(round(x "km/l", 3))
-- ERROR:
File "XXXX", line 6
    print(round(x "km/l", 3))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 02:31:23) 
-- CODE:
km = int(input("quilometros"))
l = int(input("litros"))

km/l = x

print(round(x "km/l", 3))
-- EXECUTION TIME:
0.201808
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 6
    print(round(x "km/l", 3))
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:33:30) 
-- CODE:
km = int(input("quilometros"))
l = int(input("litros"))

km/l = x

print(round(x , 3))
print("km/l")
-- ERROR:
File "XXXX", line 4
    km/l = x
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 02:33:37) 
-- CODE:
km = int(input("quilometros"))
l = int(input("litros"))

km/l = x

print(round(x , 3))
print("km/l")
-- EXECUTION TIME:
0.161402
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 4
    km/l = x
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:34:06) 
-- CODE:
km = int(input("quilometros"))
l = int(input("litros"))

print(round(km/l , 3))
print("km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 02:34:32) 
-- CODE:
km = int(input("quilometros"))
l = int(input("litros"))

print(round(km/l , 3))
print("km/l")
-- EXECUTION TIME:
0.114927
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 1, in <module>
    km = int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 02:34:52) 
-- CODE:
km = int(input("quilometros"))
l = int(input("litros"))

print(round(km/l , 3)) print("km/l")
-- EXECUTION TIME:
0.19166
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 4
    print(round(km/l , 3)) print("km/l")
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:34:54) 
-- CODE:
km = int(input("quilometros"))
l = int(input("litros"))

print(round(km/l , 3)) print("km/l")
-- ERROR:
File "XXXX", line 4
    print(round(km/l , 3)) print("km/l")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:37:21) 
-- CODE:
km = int(input("quilometros"))
l = int(input("litros"))

print(round(km/l , 3),"km/l") 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 02:38:04) 
-- CODE:
km = int(input(" quilometros "))
l = int(input(" litros "))

print(round(km/l , 3)," km/l ") 
-- EXECUTION TIME:
0.171165
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 1, in <module>
    km = int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:38:07) 
-- CODE:
km = int(input(" quilometros "))
l = int(input(" litros "))

print(round(km/l , 3)," km/l ") 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 02:39:03) 
-- CODE:
km = int(input(" quilometros "))
l = int(input(" litros "))

print(round(km/l , 3),"km/l") 
-- EXECUTION TIME:
0.146365
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 1, in <module>
    km = int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:39:04) 
-- CODE:
km = int(input(" quilometros "))
l = int(input(" litros "))

print(round(km/l , 3),"km/l") 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:39:38) 
-- CODE:
km = int(input(" quilometros "))
l = int(input(" litros "))

print(round(km/l , 3),"km/l") 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:41:03) 
-- CODE:
km = int(input(" quilometros "))
l = int(input(" litros "))
m = ("km/l")
print(round(km/l , 3),m) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 02:41:14) 
-- CODE:
km = int(input(" quilometros "))
l = int(input(" litros "))
m = ("km/l")
print(round(km/l , 3),m) 
-- EXECUTION TIME:
0.165474
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 1, in <module>
    km = int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:43:52) 
-- CODE:
km = int(input(" quilometros "))
l = int(input(" litros "))
m = ("km/l")
print(round(km/l , 3),m) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:43:54) 
-- CODE:
km = int(input(" quilometros "))
l = int(input(" litros "))
m = ("km/l")
print(round(km/l , 3),m) 
-- EXECUTION TIME:
0.278667
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 1, in <module>
    km = int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:04:58) 
-- CODE:
km = int(input(" quilometros "))
l = int(input(" litros "))
m = ("km/l")
v = km/l
print(round(v , 3),m) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    km = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:05:10) 
-- CODE:
km = int(input(" quilometros "))
l = int(input(" litros "))
m = ("km/l")
v = km/l
print(round(v , 3),m) 
-- EXECUTION TIME:
0.148769
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 1, in <module>
    km = int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:09:01) 
-- CODE:
km = float(input(" quilometros "))
l = float(input(" litros "))
m = ("km/l")
v = km/l
print(round(v , 3),m) 
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:09:08) 
-- CODE:
km = float(input(" quilometros "))
l = float(input(" litros "))
m = ("km/l")
v = km/l
print(round(v , 3),m) 
-- EXECUTION TIME:
0.181401
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
